Add toolbar and progress bar to home, chat, connection request and connected user activities

--- a/myGuide/app/src/main/res/layout/activity_tutor_notification.xml
+++ b/myGuide/app/src/main/res/layout/activity_tutor_notification.xml
@@ -6,6 +6,58 @@
     android:layout_height="match_parent"
     tools:context=".ui.TutorNotificationActivity"
     android:fitsSystemWindows="true">
+    <androidx.appcompat.widget.Toolbar
+
+        android:id="@+id/connection_request_toolbar"
+        android:layout_width="match_parent"
+
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:fitsSystemWindows="true"
+        android:minHeight="?attr/actionBarSize"
+        android:paddingLeft="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:titleTextColor="@android:color/black">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="8dp">
+
+            <ImageView
+                android:id="@+id/connection_request_goback"
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:layout_gravity="left"
+                android:layout_marginStart="-5dp"
+                android:layout_marginTop="-5dp"
+                android:background="@color/white"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="?attr/actionModeCloseDrawable" />
+
+            <TextView
+                android:id="@+id/tvConnectionRequestTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="-5dp"
+                android:layout_marginTop="-5dp"
+                android:text="Connection Requests"
+                android:textColor="#40C4FF"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </androidx.appcompat.widget.Toolbar>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvRequest"
@@ -14,5 +66,31 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/connection_request_toolbar" />
+
+    <TextView
+        android:id="@+id/empty_view_connection_request"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:minHeight="200dp"
+        android:paddingTop="20dp"
+        android:visibility="invisible"
+        android:text="You have no connection request."
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/connection_request_toolbar" />
+
+    <ProgressBar
+        android:id="@+id/progressbar_connection_request"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minHeight="100dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/connection_request_toolbar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
