--- a/myGuide/app/src/main/res/layout/fragment_chat_tutor.xml
+++ b/myGuide/app/src/main/res/layout/fragment_chat_tutor.xml
@@ -7,9 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".ui.TutorHomeActivity"
     android:background="@color/white">
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
@@ -19,7 +17,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/blue"
+            android:background="#40C4FF"
             android:minHeight="?attr/actionBarSize"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +39,7 @@
                 android:layout_height="40dp"
                 android:layout_gravity="right"
                 android:layout_margin="10dp"
-                android:background="@color/white"
+                android:background="#40C4FF"
                 android:src="@drawable/notification_icon"
                 tools:layout_editor_absoluteX="391dp"
                 tools:layout_editor_absoluteY="18dp">
@@ -58,6 +56,28 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+
+        <TextView
+            android:id="@+id/empty_view_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:minHeight="200dp"
+            android:paddingTop="20dp"
+            android:visibility="invisible"
+            android:text="No data available"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
+        <ProgressBar
+            android:id="@+id/progressbar_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            android:minHeight="100dp"
+            android:paddingTop="20dp"/>
 
 
 
