--- a/myGuide/app/src/main/res/layout/fragment_search_result.xml
+++ b/myGuide/app/src/main/res/layout/fragment_search_result.xml
@@ -83,4 +83,30 @@
         app:strokeColor="#2196F3"
         app:strokeWidth="2dp" />
 
+
+    <TextView
+        android:id="@+id/empty_view_search_result"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:minHeight="200dp"
+        android:paddingTop="20dp"
+        android:visibility="invisible"
+        android:text="No tutor found. Please refine your search."
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+    <ProgressBar
+        android:id="@+id/progressbar_search_result"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:minHeight="100dp"
+        android:paddingTop="20dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
